@@ -13,7 +13,6 @@ S3method(resolved,BatchJobsFuture)
 S3method(status,BatchJobsFuture)
 S3method(value,BatchJobsFuture)
 export("%resources%")
-export(AsyncError)
 export(AsyncTaskError)
 export(BatchJobsFuture)
 export(backend)
